add the agda course materials.

--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
       </li>
 
       <li>
-        I was the teaching assistant, I helped develop homework and projects. 
+        I was the teaching assistant, I helped develop homework and projects.
+        See <a href="https://www.mathstat.dal.ca/~selinger/agda-lectures/">here</a> for the course materials. 
       </li>
     </ul>
 
