--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="name-area">
       <span id="name">Frank(Peng) Fu</span> <br />
       <span id="title">Postdoctoral researcher</span> <br />
-      <span id="department">Department of Mathematics and Statistics </span> <br/>
+      <!-- <span id="department">Department of Mathematics and Statistics </span> <br/> -->
     </div>
     <div id="contact-info">
       <a href="http://mathstat.dal.ca">Dalhousie University</a> <br />
