make a redirection to my actual homepage

--- a/index.html
+++ b/index.html
@@ -2,304 +2,7 @@
 
 <html>
 <head>
-<script src="https://www.googletagmanager.com/gtag/js?id=UA-36515113-3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-36515113-3');
-</script>
-
-
-  <title>Frank Fu </title>
-  <link rel="stylesheet" href="mystyle.css" />
-  <script type="text/x-mathjax-config">
-  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-  </script>
-  <script type="text/javascript" 
-          src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>  
-  <script type="text/javascript" src="myjs.js">
-  </script>
+<meta http-equiv="refresh" content="0; url=https://fermat.github.io/" />
 </head>
-
-<body>
-  <a name="Top"></a>
-  <div id="header">
-    <div id="name-area">
-      <span id="name">Frank(Peng) Fu</span> <br />
-      <span id="title">Postdoctoral researcher</span> <br />
-      <span id="department">Department of Mathematics and Statistics </span> <br/>
-    </div>
-    <div id="contact-info">
-      <a href="http://mathstat.dal.ca">Dalhousie University</a> <br />
-      Chase Building 251
-     <br />
-     Email: frank-fu at dal.ca
-     <br />
-     Phone: 902-494-6760
-    </div>
-  </div>
-
-  
-  <br />
-<div id="quicklinks">
-  <ul class="jump-bar">
-    <li class="nbsp">&nbsp;</li>  
-  <li><a href="#papers">Papers</a></li>
-    <li class="nbsp">&nbsp;</li>  
-  <li><a href="#projects">Projects</a></li>
-    <li class="nbsp">&nbsp;</li>
-  <li><a href="#talks">Talks</a></li>
-  <li class="nbsp">&nbsp;</li>
-  <li><a href="#notes">Notes</a></li>
-  <li class="nbsp">&nbsp;</li>
-  <li><a href="#cv">Job application materials</a></li>
-  </ul>
-  </div>  
-
-  <!-- <hr /> -->
-  <!-- [Jan 1, 2019] This website is currently under maintenance.   -->
-  <hr />
-  <div>
-
-    
-    <h3>Research</h3>
-    <p>
-      Broadly speaking, I am interested in type theories and their applications in
-      programming languages. In the past, I worked on supporting the
-      verification of lambda-encoded programs in a <a href="#self-type">type system</a>
-      and in a <a href="#gottlob">higher-order logic.</a>
-      I also enjoyed working on Haskell-style <a href="#resolve">type class</a>,
-      which leads to a connection to <a href="#rewriting">term rewriting</a>.
-      I was excited to discover that we can verify and program with nested data types
-      in a total programming language with <a href="#nested">dependent types</a>.
-      Recently, I am working on a linear dependently typed programming language for
-      circuit design. 
-    </p>
-  </div>
-
-  <h3>Education</h3>
-  <ul>
-  <li> Ph.D. in Computer Science, the University of Iowa, 2014 </li> 
-  <li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li> 
-  </ul>
-
-<hr />
-
-
-<a name="papers"></a>
-
-<h3><a href="#Top">Papers</a> </h3>
-<ul>
-  
-   <li><a name="nested"></a>
-    <p><em> Dependently typed folds for nested data types.</em>
-    Peng Fu, Peter Selinger, 2018.
-    [<a href="https://arxiv.org/abs/1806.05230">arXiv</a>]</p></li>
-
-  <li><p><em> A Type Checking Algorithm for Higher-rank, Impredicative and Second-order Types.</em>
-    Peng Fu, 2017.
-    [<a href="https://arxiv.org/abs/1711.04718">arXiv</a>]</p></li>
-  
-  <li><a name="rewriting"></a>
-      <p><em> Representing Nonterminating Rewriting with $\mathbf{F}^2_{\mu}$.</em>
-      Peng Fu, 2017. 
-    [<a href="https://arxiv.org/abs/1706.00746">arXiv</a>]</p></li>
-
-
-  <li><p><em>Efficiency of Lambda-Encodings in Total Type Theory.</em>
-    Aaron Stump, Peng Fu. Journal of Functional Programming, 2016.
-    [<a href="./document/papers/efficiency.pdf">pdf</a>]</p></li>
-
-  <li><a name="resolve"></a>
-<p><em>Proof Relevant Corecursive Resolution.</em>
-    Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond.
-      International Symposium on Functional and Logic Programming, 2016.
-     [<a href="./document/papers/corec.pdf">pdf</a>] 
-      </p></li>
-
-  <li><p><em>Operational Semantics of Resolution and Productivity in Horn Clause Logic.</em>
-    Peng Fu, Ekaterina Komendantskaya. Formal Aspect of Computing, 2016 [<a href="./document/papers/fac-journal.pdf">pdf</a>]</p></li>
-
-  <li><p><em>A Type-Theoretic Approach to Resolution.</em>
-    Peng Fu, Ekaterina Komendantskaya. International Symposium on Logic-Based Program Synthesis and Transformation, 2015.
-      [<a href="./document/papers/tm-lp.pdf">pdf</a>]
-      </p></li>
-  
-   <li><a name="self-type"></a>
-
-<p><em> Lambda Encodings in Type Theory.</em>
-    Peng Fu, Dissertation, 2014.
-      [<a href="./document/papers/dissertation.pdf">pdf</a>]
-      </p></li>
-      <li>
-          <p><em>Self Types for Dependently Typed Lambda Encodings.</em>
-    Peng Fu, Aaron Stump. Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications, 2014.
-      [<a href="./document/papers/rta-tlca.pdf">pdf</a>]
-      </p></li>
-
-
-  <li><p><em> Equational Reasoning about Programs with General Recursion and Call-by-value Semantics.</em>
-    Garrin Kimmell, Aaron Stump, Harley Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sjoberg, Nathan Collins, Ki Yung Ahn. Programming Languages meets Program Verification, 2012.</p></li>
-  
-  <li><p><em> Irrelevance, Heterogeneous Equality, and Call-by-value Dependent Type Systems. </em> Vilhelm Sjoberg,Chris Casinghino, Ki Yung Ahn, Nathan Collins, Harley Eades III, Peng Fu, Garrin Kimmell, Tim Sheard, Aaron Stump, Stephanie Weirich. Mathematically Structured Functional Programming, 2012.</p>
-  </li>
-  
-  <li><p><em>A Framework for Internalizing Relations into Type Theory.</em>
-    Peng Fu, Aaron Stump, Jeff Vaughan. International Workshop on Proof-Search in Axiomatic Theories and Type Theories, 2011.
-      [<a href="./document/papers/psattt-paper.pdf">pdf</a>]
-      </p></li>
-
-</ul>
-
-
-
-<hr />
-
-<a name="projects"></a>
-<h3><a href="#Top">Projects</a> </h3>
-
-<ul>
-    <li> Dependently typed folds for nested data types. 
-        [<a href = "https://github.com/Fermat/dependent-fold"> Project link</a>]
-        [<a href = "https://arxiv.org/abs/1806.05230"> Paper documention in arXiv</a>]</br>
-      <p> <strong>Summary:</strong> 
-        This project shows how to program with nested data types
-        in the total dependently typed language Agda using a new construct called dependently typed
-        fold. We show how to derive induction principles for nested data types as well, hence enabling
-        the verification of programs within Agda. As a case study, we translated all of the programs
-        described by Ricard Bird and Ross Patterson's paper
-        "De Bruijn notation as nested datatype" into Agda and
-        prove their correctness within Agda. The Agda code is available in the project link above. 
-        The paper documentation explains the idea of the dependently typed folds and how to 
-        verify programs using the induction principles derived from the dependently typd folds.
-      </p>
-    </li> 
-
-    <li> A Type Checking Algorithm for Higher-rank, Impredicative and Second-order Types.
-        [<a href = "https://github.com/Fermat/higher-rank"> Project link</a>]
-        [<a href = "https://arxiv.org/abs/1711.04718"> Paper documention in arXiv</a>]</br>
-     <p>
-     <strong>Summary:</strong> 
-     Hindley-Milner type checking algorithm is widely used to implment mordern type checker. 
-     However, Hindley-Milner algorithm does not support higher-rank types. In presence of
-     higher-rank, impredicative and higher-order types, it is often needed to 
-     annotate a program with types. 
-
-     In this project, we explore a type checking algorithm for higher-rank, impredicative and 
-     second-order types. The algorithm only requires type annotation
-     at the top level, there is no need to annotate types inside a program. Compare to the 
-     popular bidirectional type checking algorithm, our type checking algorithm is based on 
-     resolution, which is a widely used technique in automated theorem proving. The algorithm
-     is one direction,
-     i.e. there is no type infer process, a program will always be checked against a certain type.
-     As a case study, we implement a prototype type checker and 
-     use it to type check some nontrivial algorithms that makes essential use of impredicativity
-     and second-order types, these include Stump's Church-encoded merge-sort(<a href = "https://github.com/Fermat/higher-rank/blob/master/test/church-braun.hr">see here</a>), Bird and Patterson's 
-     generalized folds(<a href = "https://github.com/Fermat/higher-rank/blob/master/test/bird.hr">see here</a>).
-     </p>
-    </li> 
-
-   <li> Gottlob: a theorem prover for verifying Scott-encoded programs. 
-        [<a href = "https://github.com/Fermat/gottlob"> Project link</a>]
-        [<a href = "./document/notes/comprehension.pdf"> Documention</a>]</br>
-       <p>
-       <strong>Summary:</strong> 
-       The Gottlob theorem prover implements a version of minimal higher-order logic and an interpretor
-       for a polymorphic function programming language. The functional programs are translated
-       to Scott-encoded lambda terms and the minimal higher-order logic uses comprehension
-       principle to derive induction principle to reason about programs. As a case study, we 
-       use Gottlob to prove the correctness of the natural number division. 
-       It is unusual in the sense that the division algorithm will diverge 
-       when one of the input is zero(<a href = "https://github.com/Fermat/Gottlob/blob/master/tests/div.gf">see here</a>). This contracts the traditional theorem provers where 
-       all functions are requires to be terminating.  
-       </p>
-    </li> 
-
-
-
-</ul>
-
-
-<hr />
-
-<a name="notes"></a>
-<h3><a href="#Top">Notes</a> </h3>
-
-<ul id="noteslist">
-    <li><p> <em>Reducibility Method for Call-by-Value Simply Typed Lambda Calculus</em>, March 2010. [<a href="./document/notes/reducibility-stlc.pdf">pdf</a>]</p></li>
-
-  <li><p> <em>Subtyping Relation as Reducibility Set Inclusion</em>, March 2010. [<a href="./document/notes/subtyping-st.pdf">pdf</a>]</p></li>
-
-  <li><p> <em>Reducibility Method for Call-by-Value System $\mathbf{F}$</em>, June 2010. [<a href="./document/notes/system-f-iii.pdf">pdf</a>]</p></li>
-
-  <li><p> <em>Type Preservation for System $\mathbf{F}$ a la Curry</em>, 2011. [<a href="./document/notes/systemf.pdf">pdf</a>]</p></li>
-
-  <li><p> <em>Confluence for Local Lambda-Mu Calculus</em>, July 2013. [<a href="./document/notes/conf-lambda-mu-II.pdf">pdf</a>]</p>
-
-  <li><p> <em>Type Preservation for Curry Style $\mathbf{F}_{\omega}$</em>, July 2013. [<a href="./document/notes/fomega-presv.pdf">pdf</a>]</p>
-      <p><strong>Remarks</strong>: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style System $\mathbf{F}$ to $\mathbf{F}_{\omega}$</p></li>
-
-  <li><p> <em>Lambda Encoding, Types and Confluence</em>. [<a href="./document/notes/comp-exam.pdf">pdf</a>]</p>
-    <p>Peng Fu. May 2013.</p>
-    <p><strong>Remarks</strong>: This is my comprehensive exam paper.</p></li>
-
- 
-    <li><p><em> Dependently-typed Programming with Scott Encoding</em>. Peng Fu, Aaron Stump. 2013. [<a href="./document/papers/scott-dep.pdf">pdf</a>]</p></li>
- 
-    <li><a name="gottlob"></a>
-<p> <em>Lambda Encoding with Comprehension</em>. [<a href="./document/notes/comprehension.pdf">pdf</a>]</p>
-    <p>Peng Fu. Oct 2013.</p>
-    
-    <p><strong>Remarks</strong>: A Chapter from my dissertation.</p></li>
-
- 
-  <li><p><em>Type Class and Logic Programming with Term Matching</em>, Nov 2014. [<a href="./document/notes/tm.pdf">pdf</a>]</p>
-    <p><strong>Remarks</strong>: This note shows how one can have a notion of <em>logic programming</em> based solely on term matching.</p></li>
-  
-  <li><p><em>Realizability at work</em>, June, 2017. [<a href="./document/notes/realization.pdf">pdf</a>]</p>
-    <p><strong>Remarks</strong>: This notes shows examples of realization by termination and realization by shape index.</p></li>
-</ul>
-
-<script type="text/javascript">
-  reverse("noteslist");
-</script>
-
-<hr />
-
-<a name="talks"></a>
-<h3><a href="#Top">Talks</a> </h3>
-
-<ul>
-  <li><p><em>Dependent types in Proto-quipper</em>
-      September 20, 2018, Dagstuhl Seminar: Quantum Programming Languages, Dagstuhl, Germany.
-  </p></li>
-  
-  <li><p><em>Encoding Data in Lambda Calculus: An Introduction</em>
-      September 26, 2017, Atlantic Category Seminar, Dalhousie University, Canada.
-      [<a href="./document/talks/lam.pdf">Slides</a>]</p></li>
-
-  <li><p><em>Proof Relevant Corecursive Resolution</em>
-      June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="./document/talks/spls-2016.pdf">Slides</a>]</p></li>
-
-  <li><p><em>A Type-Theoretic Approach to Structural Resolution</em>
-      July 13, 2015, LOPSTR, Siena, Italy. [<a href="./document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
-
-  <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>
-      July 15, 2014, RTA-TLCA, Vienna, Austria. [<a href="./document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
-
-  <li><p><em>Lambda Encodings in Type Theory</em>
-      May 2, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="./document/talks/thesis-talk.pdf">Slides</a>]</p></li>
-
-  <li><p><em>Dependent Lambda Encoding with Self Types</em>
-      September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [<a href="./document/talks/dtp-2013.pdf">Slides</a>]</p></li>
-
-  <li><p><em>A Framework for Internalizing Relations into Type Theory</em>
-      August 2011, PSATTT workshop, Wroclaw. Poland. [<a href="./document/talks/psattt11-talk.pdf">Slides</a>]</p></li>
-</ul>
-
-
-</body>
 
 </html>
