make redirection explicit

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://fermat.github.io/" />
+<meta http-equiv="refresh" content="7; url=https://fermat.github.io" />
 </head>
-
+<body>
+    <p>Please follow <a href="https://fermat.github.io">this link</a>
+to my homepage.</p>
+  </body>
 </html>
