--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 
 <html>
 <head>
-<meta http-equiv="refresh" content="7; url=https://fermat.github.io" />
 </head>
 <body>
-    <p>Please follow <a href="https://fermat.github.io">this link</a>
-to my homepage.</p>
+    <p>Please see my homepage at <a href="https://fermat.github.io">fermat.github.io</a>.</p>
   </body>
 </html>
