add schedule for winter 2022

--- a/atcat/index.html
+++ b/atcat/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- Html template adapted from Matt Amy's atcat.html -->
 <head>
   <title>ATCAT</title>
   <link rel="stylesheet" href="style.css" type="text/css">
@@ -30,25 +30,87 @@
   <p>
     <ul class="list">
 
-      <li>
-        <strong> September 28th, 2021 </strong> <br>
-        <a href="https://fermat.github.io/" 
-           class="person">Frank Fu</a>, Dalhousie University <br>
-        <em> A description of a reflective functor in the category of presheaves </em><br>
-        <details>
-          <summary>Abstract</summary>
-	  <p class="abstract">
-            It is well-known that the subcategory of limit preserving
-            functors in the category of presheaves is reflective. But
-            what is the exact definition of the left adjoint? In this talk, we
-            consider the subcategory of product preserving functors
-            (a special case of limit preserving functors) and give a description of
-            the left adjoint using some concepts from multi-sorted term algebra.<br><br>
+      <!-- <li> -->
+      <!--   <strong> September 28th, 2021 </strong> <br> -->
+      <!--   <a href="https://fermat.github.io/"  -->
+      <!--      class="person">Frank Fu</a>, Dalhousie University <br> -->
+      <!--   <em> A description of a reflective functor in the category of presheaves </em><br> -->
+      <!--   <details> -->
+      <!--     <summary>Abstract</summary> -->
+      <!-- 	  <p class="abstract"> -->
+      <!--       It is well-known that the subcategory of limit preserving -->
+      <!--       functors in the category of presheaves is reflective. But -->
+      <!--       what is the exact definition of the left adjoint? In this talk, we -->
+      <!--       consider the subcategory of product preserving functors -->
+      <!--       (a special case of limit preserving functors) and give a description of -->
+      <!--       the left adjoint using some concepts from multi-sorted term algebra.<br><br> -->
 
-            [This is a joint work with Peter Selinger, Kohei Kishida and Neil J. Ross]
-	  </p>
-	</details>
+      <!--       [This is a joint work with Peter Selinger, Kohei Kishida and Neil J. Ross] -->
+      <!-- 	  </p> -->
+      <!-- 	</details> -->
+      <!-- </li> -->
+
+      <li>
+	<strong> January 18th, 2022 </strong> <br>
+	TBD<br>
       </li>
+
+      <li>
+	<strong> January 25th, 2022 </strong> <br>
+	TBD<br>
+      </li>
+
+      <li>
+	<strong> February 1st, 2022 </strong> <br>
+	TBD<br>
+      </li>
+
+      <li>
+	<strong> February 8th, 2022 </strong> <br>
+	TBD<br>
+      </li>
+
+      <li>
+	<strong> February 15th, 2022 </strong> <br>
+	TBD<br>
+      </li>
+
+      <li>
+	<strong> February 22nd, 2022 </strong> <br>
+	TBD<br>
+      </li>
+
+      <li>
+	<strong> March 1st, 2022 </strong> <br>
+	<a href="https://www.mathstat.dal.ca/~mszyld/">
+	Martin Szyld</a>, Dalhousie University <br>
+      </li>
+
+      <li>
+	<strong> March 8th, 2022 </strong> <br>
+	TBD<br>
+      </li>
+
+      <li>
+	<strong> March 15th, 2022 </strong> <br>
+	TBD<br>
+      </li>
+
+      <li>
+	<strong> March 22nd, 2022 </strong> <br>
+	TBD<br>
+      </li>
+
+      <li>
+	<strong> March 29th, 2022 </strong> <br>
+	TBD<br>
+      </li>
+
+      <li>
+	<strong> April 5th, 2022 </strong> <br>
+	TBD<br>
+      </li>
+
     </ul>
 
 </body>
