--- a/atcat/index.html
+++ b/atcat/index.html
@@ -21,7 +21,7 @@
   <p>
 
     Information about previous seminars can be found 
-    <a href="https://www.mathstat.dal.ca/~mamy/atcatpast.html">here</a>.
+    <a href="https://www.mathstat.dal.ca/~mamy/atcat.html">here</a>.
   </p>
     
 
@@ -113,4 +113,14 @@
 
     </ul>
 
+  <p>
+    <hr>
+    
+    <div class="updated">
+      <p>
+	  Updated December 29, 2021 by 
+	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
+      </p>
+    </div>
+  </p>
 </body>
