simplify intro and add atcat link.

--- a/index.html
+++ b/index.html
@@ -70,16 +70,13 @@
     <h3>Research</h3>
     <p>
       Broadly speaking, I am interested in type theories and their applications in
-      programming languages. In the past, I worked on supporting the
-      verification of lambda-encoded programs in a <a href="#self-type">type system</a>
-      and in a <a href="#gottlob">higher-order logic.</a>
-      I also enjoyed working on Haskell-style <a href="#resolve">type class</a>,
-      which leads to a connection to <a href="#rewriting">term rewriting</a>.
-      I was excited to discover that we can verify and program with nested data types
-      in a total programming language with <a href="#nested">dependent types</a>.
-      I am working on the design and implementation of a linear
+      programming languages.
+      Currently, I am working on the design and implementation of a linear
       dependently typed system for <a href="#dpq">quantum programming language</a>,
-      see a tutorial <a href="#dpq-tutorial">here</a>.
+      see a tutorial <a href="#dpq-tutorial">here</a>. I am also organizing
+      the ATCAT seminar this semester, here is the current <a href="https://www.mathstat.dal.ca/~fu/atcat/">schedule</a>. 
+      
+      
     </p>
   </div>
 
