--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
     <p>
       Broadly speaking, I am interested in type theories and their applications in
       programming languages.
-      Currently, I am working on the design and implementation of a linear
+      I am working on the design and implementation of a linear
       dependently typed system for <a href="#dpq">quantum programming language</a>,
-      see a tutorial <a href="#dpq-tutorial">here</a>. I am also organizing
-      the ATCAT seminar this semester, here is the current <a href="https://www.mathstat.dal.ca/~fu/atcat/">schedule</a>. 
-      
-      
+      see a tutorial <a href="#dpq-tutorial">here</a>. <br>
+
+      I am also organizing
+      the <a href="https://www.mathstat.dal.ca/~selinger/atcat/">ATCAT</a> seminar this semester, here is the current <a href="https://www.mathstat.dal.ca/~fu/atcat/">schedule</a>. 
     </p>
   </div>
 
