--- a/atcat/index.html
+++ b/atcat/index.html
@@ -88,7 +88,8 @@
 
       <li>
 	<strong> March 8th, 2022 </strong> <br>
-	TBD<br>
+	<a href="https://www.jasonparkermath.com/">
+	Jason Parker</a>, Brandon University <br>
       </li>
 
       <li>
