--- a/atcat/index.html
+++ b/atcat/index.html
@@ -104,7 +104,8 @@
 
       <li>
 	<strong> March 29th, 2022 </strong> <br>
-	TBD<br>
+	<a>
+	Geoffrey Vooys</a>, Dalhousie University <br>
       </li>
 
       <li>
@@ -119,7 +120,7 @@
     
     <div class="updated">
       <p>
-	  Updated December 29, 2021 by 
+	  Updated January 4, 2022 by 
 	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
       </p>
     </div>
