--- a/atcat/index.html
+++ b/atcat/index.html
@@ -94,23 +94,25 @@
 
       <li>
 	<strong> March 15th, 2022 </strong> <br>
-	TBD<br>
+	<a href="http://www.reluctantm.com/gcruttw/">
+	  Geoffrey Cruttwell</a>, Mount Allison University<br>
       </li>
 
       <li>
 	<strong> March 22nd, 2022 </strong> <br>
-	TBD<br>
+	<a href="http://www.reluctantm.com/gcruttw/">
+	  Geoffrey Cruttwell</a>, Mount Allison University<br>
       </li>
 
       <li>
 	<strong> March 29th, 2022 </strong> <br>
-	<a>
-	Geoffrey Vooys</a>, Dalhousie University <br>
+	Geoffrey Vooys, Dalhousie University <br>
       </li>
 
       <li>
 	<strong> April 5th, 2022 </strong> <br>
-	TBD<br>
+	<a href="https://dariendewolf.com/">
+	  Darien DeWolf</a>, Brandon University<br>
       </li>
 
     </ul>
@@ -120,7 +122,7 @@
     
     <div class="updated">
       <p>
-	  Updated January 4, 2022 by 
+	  Updated January 5, 2022 by 
 	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
       </p>
     </div>
