--- a/atcat/index.html
+++ b/atcat/index.html
@@ -52,61 +52,59 @@
 
       <li>
 	<strong> January 18th, 2022 </strong> <br>
-	TBD<br>
+	<a href="https://sites.google.com/view/jspl-personal-webpage/">
+	  JS Lemay</a>, Mount Allison University <br><br>
       </li>
 
       <li>
 	<strong> January 25th, 2022 </strong> <br>
-	TBD<br>
+	TBD<br><br>
       </li>
 
       <li>
 	<strong> February 1st, 2022 </strong> <br>
-	TBD<br>
+	TBD<br><br>
       </li>
 
       <li>
 	<strong> February 8th, 2022 </strong> <br>
-	TBD<br>
+	<a href="https://michaeljlambert.github.io/">
+	  Michael Lambert</a>, Mount Allison University<br><br>
       </li>
 
       <li>
 	<strong> February 15th, 2022 </strong> <br>
-	TBD<br>
-      </li>
-
-      <li>
-	<strong> February 22nd, 2022 </strong> <br>
-	TBD<br>
+	<a href="http://categorified.net/">
+	  Theo Johnson-Freyd</a>, Dalhousie University<br><br>
       </li>
 
       <li>
 	<strong> March 1st, 2022 </strong> <br>
 	<a href="https://www.mathstat.dal.ca/~mszyld/">
-	Martin Szyld</a>, Dalhousie University <br>
+	Martin Szyld</a>, Dalhousie University <br><br>
       </li>
 
       <li>
 	<strong> March 8th, 2022 </strong> <br>
 	<a href="https://www.jasonparkermath.com/">
-	Jason Parker</a>, Brandon University <br>
+	Jason Parker</a>, Brandon University <br><br>
       </li>
 
       <li>
 	<strong> March 15th, 2022 </strong> <br>
 	<a href="http://www.reluctantm.com/gcruttw/">
-	  Geoffrey Cruttwell</a>, Mount Allison University<br>
+	  Geoffrey Cruttwell</a>, Mount Allison University<br><br>
       </li>
 
       <li>
 	<strong> March 22nd, 2022 </strong> <br>
 	<a href="http://www.reluctantm.com/gcruttw/">
-	  Geoffrey Cruttwell</a>, Mount Allison University<br>
+	  Geoffrey Cruttwell</a>, Mount Allison University<br><br>
       </li>
 
       <li>
 	<strong> March 29th, 2022 </strong> <br>
-	Geoffrey Vooys, Dalhousie University <br>
+	Geoffrey Vooys, Dalhousie University <br><br>
       </li>
 
       <li>
