add one more talk.

--- a/atcat/index.html
+++ b/atcat/index.html
@@ -63,7 +63,7 @@
 
       <li>
 	<strong> February 1st, 2022 </strong> <br>
-	TBD<br><br>
+	Mitchell Riley, Wesleyan University<br><br>
       </li>
 
       <li>
