add abstract from JS.

--- a/atcat/index.html
+++ b/atcat/index.html
@@ -54,6 +54,15 @@
 	<strong> January 18th, 2022 </strong> <br>
 	<a href="https://sites.google.com/view/jspl-personal-webpage/">
 	  JS Lemay</a>, Mount Allison University <br><br>
+	Title: <em> Monoidal Closed but not Compact Closed </em><br>
+	<p>
+	Abstract:<br>
+	Every compact closed category is monoidal closed where the internal-hom is given as $A \multimap B = A^* \otimes B$. In the special case of self-dual compact closed category, where every object is its own dual $A^* = A$, then we have that the internal-hom is precisely the tensor product $A \multimap B = A \otimes B$. However, is the converse true? Starting with a symmetric monoidal category X such that $A \multimap B = A \otimes B$, is X compact closed? At first glance this seems like this might be true... But if one tries to prove the snake equations, one runs into troubles! So the answer is more likely no... but what's the counter-example? Unfortunately, no one seems to have a natural counter-example...
+
+	  In this talk, I'll discuss this odd problem in more detail and hopefully someone smarter than me in the audience will come up with a counter-example.
+
+	  This will be an easy and relaxed talk to start the term, so everyone should be able to follow along!
+	</p>
       </li>
 
       <li>
