--- a/atcat/index.html
+++ b/atcat/index.html
@@ -51,7 +51,7 @@
       <!-- </li> -->
 
       <li>
-	<strong> January 18th, 2022 </strong> <br>
+	<strong> January 18th, 2022 </strong> [<a href="./JS_note_1-18-22.pdf">note</a>]<br>
 	<a href="https://sites.google.com/view/jspl-personal-webpage/">
 	  JS Lemay</a>, Mount Allison University <br><br>
 	Title: <em> Monoidal Closed but not Compact Closed </em><br>
