--- a/atcat/index.html
+++ b/atcat/index.html
@@ -66,13 +66,23 @@
       </li>
 
       <li>
-	<strong> January 25th, 2022 </strong> <br>
-	TBD<br><br>
-      </li>
-
-      <li>
 	<strong> February 1st, 2022 </strong> <br>
 	Mitchell Riley, Wesleyan University<br><br>
+	Title: <em>Combining Bunched Type Theory with Dependent Types</em><br>
+	<p>
+	  Abstract:<br>
+	  Categories of interest often have more than one monoidal closed
+	  structure, and "bunched type theories" have been developed to capture
+	  this situation. In this talk, I will present a novel combination of
+	  bunched type theory with dependent types, giving a much more
+	  expressive theory. Every type will have both a linear and non-linear
+	  aspect, and the various type formers interact with both aspects. The
+	  motivation for this work was to find a way to formalise arguments from
+	  stable homotopy theory in type theory, but we also anticipate
+	  applications to the theory of quantum programming languages.
+	  <br>
+	  jww. with Dan Licata
+	</p>
       </li>
 
       <li>
@@ -129,7 +139,7 @@
     
     <div class="updated">
       <p>
-	  Updated January 5, 2022 by 
+	  Updated January 27, 2022 by 
 	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
       </p>
     </div>
