--- a/atcat/index.html
+++ b/atcat/index.html
@@ -30,25 +30,6 @@
   <p>
     <ul class="list">
 
-      <!-- <li> -->
-      <!--   <strong> September 28th, 2021 </strong> <br> -->
-      <!--   <a href="https://fermat.github.io/"  -->
-      <!--      class="person">Frank Fu</a>, Dalhousie University <br> -->
-      <!--   <em> A description of a reflective functor in the category of presheaves </em><br> -->
-      <!--   <details> -->
-      <!--     <summary>Abstract</summary> -->
-      <!-- 	  <p class="abstract"> -->
-      <!--       It is well-known that the subcategory of limit preserving -->
-      <!--       functors in the category of presheaves is reflective. But -->
-      <!--       what is the exact definition of the left adjoint? In this talk, we -->
-      <!--       consider the subcategory of product preserving functors -->
-      <!--       (a special case of limit preserving functors) and give a description of -->
-      <!--       the left adjoint using some concepts from multi-sorted term algebra.<br><br> -->
-
-      <!--       [This is a joint work with Peter Selinger, Kohei Kishida and Neil J. Ross] -->
-      <!-- 	  </p> -->
-      <!-- 	</details> -->
-      <!-- </li> -->
 
       <li>
 	<strong> January 18th, 2022 </strong> [<a href="./JS_note_1-18-22.pdf">note</a>]<br>
@@ -89,6 +70,13 @@
 	<strong> February 8th, 2022 </strong> <br>
 	<a href="https://michaeljlambert.github.io/">
 	  Michael Lambert</a>, Mount Allison University<br><br>
+	Title: <em>Improvements to 'Double Categories of Relations'</em><br>
+	<p>
+	  Abstract:<br>
+	  In this talk I'll discuss how the overabundance of axioms in
+	  my previous characterization of double categories of
+	  relations (ACT 2021) can be cut down to a manageable number.
+	</p>
       </li>
 
       <li>
@@ -139,7 +127,7 @@
     
     <div class="updated">
       <p>
-	  Updated January 27, 2022 by 
+	  Updated Feb 8, 2022 by 
 	  <a href=mailto:frank-fu@dal.ca>Frank Fu</a>
       </p>
     </div>
