--- a/atcat/index.html
+++ b/atcat/index.html
@@ -83,6 +83,20 @@
 	<strong> February 15th, 2022 </strong> <br>
 	<a href="http://categorified.net/">
 	  Theo Johnson-Freyd</a>, Dalhousie University<br><br>
+	Title: <em>Categorified algebraic closure</em><br>
+	<p>
+	  Abstract:<br>
+	  A famous theorem of Deligne's says that any
+	  (abelian, $\mathbb{C}$-linear) symmetric monoidal category satisfying certain mild size constraints
+	  admits a symmetric monoidal functor to the category sVec of super vector spaces.
+	  Deligne used this result to classify such symmetric monoidal categories in terms of representation
+	  theories of algebraic groups — this is the "Tannakian Duality". A few years ago, I pointed out that
+	  Deligne's theorem has a neat interpretation: it says that the symmetric monoidal category sVec
+	  is the "algebraic closure" of the symmetric monoidal category Vec of vector spaces;
+	  that the extension Vec $\subset$ sVec is "Galois"; and
+	  that the Tannakian Duality is a categorified version of the Galois correspondence.
+	  In this talk, I will explain the statement of Deligne's theorem and my interpretation, and mention some aspects of Deligne's proof.
+	</p>
       </li>
 
       <li>
