add a link to the video recording.

--- a/atcat/index.html
+++ b/atcat/index.html
@@ -80,7 +80,7 @@
       </li>
 
       <li>
-	<strong> February 15th, 2022 </strong> <br>
+	<strong> February 15th, 2022 </strong>[<a href="./videos/theo-johnson-freyd-2-15-22.mp4">video</a>]<br>
 	<a href="http://categorified.net/">
 	  Theo Johnson-Freyd</a>, Dalhousie University<br><br>
 	Title: <em>Categorified algebraic closure</em><br>
