--- a/atcat/index.html
+++ b/atcat/index.html
@@ -102,7 +102,39 @@
       <li>
 	<strong> March 1st, 2022 </strong> <br>
 	<a href="https://www.mathstat.dal.ca/~mszyld/">
-	Martin Szyld</a>, Dalhousie University <br><br>
+	  Martin Szyld</a>, Dalhousie University <br><br>
+        Title: <em>Double Fibrations (or functors are categories)</em><br>
+        Joint work with Geoff Cruttwell, Michael Lambert, and Dorette Pronk<br>
+        <p>
+	  Abstract:<br>
+          I will give the definition of a double fibration as a (pseudo) category
+          object in the 2-category of fibrations of categories whose source and
+          target are cleavage-preserving. I will show how, much like functors are
+          category objects in an arrow category, double fibrations correspond
+          to (strict) double functors between (pseudo) double categories that
+          satisfy some properties. We have shown that these properties are
+          precisely the ones making the double functor an internal fibration
+          in the 2-category of double categories. We have also shown
+          a "Grothendieck construction theorem", that is an equivalence of
+          categories between double fibrations and indexed double categories. The
+          latter are given by a type of lax functor D --> Span(Cat) from a
+          double category D, where Span(Cat) is a 3-dimensional structure that
+          we call a double 2-category. Two examples that are unified by the theory
+          of double fibrations can also help to understand it, so we will look at
+          them. One is that (as the name indicates) ours is the non-discrete
+          case of [1], where the Grothendieck construction is that given by
+          Bob Paré in [2] for a lax functor D --> Span(Set) between double
+          categories. Also, seeing monoids as 1-object categories, we can recover
+          the results for monoidal fibrations and monoidal indexed categories
+          [3,4]. Being 3-dimensional, this is all a bit "wild" so I don't plan to
+          give the full details, but I hope to still be able to convey "why"
+          Span(Cat) is the receiving structure here that makes things work.<br><br>
+
+          [1] DISCRETE DOUBLE FIBRATIONS, MICHAEL LAMBERT, TAC 37 (2021).<br>
+          [2] YONEDA THEORY FOR DOUBLE CATEGORIES, ROBERT PARE, TAC 25 (2011). <br>
+          [3] FRAMED BICATEGORIES AND MONOIDAL FIBRATIONS, MICHAEL SHULMAN, TAC 20 (2008). <br>
+          [4] MONOIDAL GROTHENDIECK CONSTRUCTION, JOE MOELLER AND CHRISTINA VASILAKOPOULOU, TAC 35 (2020). <br>
+        </p>
       </li>
 
       <li>
