--- a/atcat/index.html
+++ b/atcat/index.html
@@ -140,7 +140,55 @@
       <li>
 	<strong> March 8th, 2022 </strong> <br>
 	<a href="https://www.jasonparkermath.com/">
-	Jason Parker</a>, Brandon University <br><br>
+	  Jason Parker</a>, Brandon University <br><br>
+        Title: <em>Enriched structure-semantics adjunctions and monad-theory equivalences for subcategories of arities
+        </em><br>
+        Joint work with Rory Lucyshyn-Wright<br>
+        <p>
+	  Abstract:<br>
+          Several structure-semantics adjunctions and monad-theory equivalences
+          have been established in category theory. Lawvere developed a
+          structure-semantics adjunction between Lawvere theories and tractable
+          Set-valued functors, which was subsequently generalized by Linton,
+          while Dubuc established a structure-semantics adjunction between
+          V-theories and tractable V-valued V-functors for a symmetric
+          monoidal closed category V. It is also well known (and due to Linton)
+          that there is an equivalence between Lawvere theories and finitary
+          monads on Set. Generalizing this result, Lucyshyn-Wright (2016)
+          established a monad-theory equivalence for eleutheric systems of arities
+          in arbitrary closed categories. Building on earlier work by Nishizawa
+          and Power, Bourke and Garner (2019) subsequently proved a general
+          monad-theory equivalence for arbitrary small subcategories of arities
+          in locally presentable enriched categories. However, neither of these
+          equivalences generalizes the other, and there has not yet been a general
+          treatment of enriched structure-semantics adjunctions that specializes
+          to those established by Lawvere, Linton, and Dubuc. <br> <br>
+
+          Motivated by these considerations, we develop a general framework for
+          studying enriched structure-semantics adjunctions and monad-theory
+          equivalences for subcategories of arities, which generalizes all
+          of the aforementioned results and also provides new ones. For
+          a subcategory of arities J in a V-category C over a
+          symmetric monoidal closed category V, Linton’s notion of clone
+          generalizes to provide enriched notions of J-theory and J-pretheory,
+          which were also employed by Bourke and Garner (2019).
+          We say that J is amenable if every J-theory admits free algebras,
+          and is strongly amenable if every J-pretheory admits free algebras.
+          If J is amenable, then we obtain an idempotent structure-semantics
+          adjunction between certain J-pretheories and J-tractable V-categories
+          over C, which yields an equivalence between J-theories and
+          J-nervous V-monads on C. If J is strongly amenable, then
+          we also obtain a rich theory of presentations for J-theories and
+          J-nervous V-monads. We show that many previously studied
+          subcategories of arities are (strongly) amenable, from which
+          we recover the aforementioned structure-semantics adjunctions and
+          monad-theory equivalences. We conclude with the result that any
+          small subcategory of arities in a locally bounded closed
+          category is strongly amenable, from which we obtain structure-semantics
+          adjunctions and monad-theory equivalences in (e.g.) many
+          convenient categories of spaces.
+        </p>
+        
       </li>
 
       <li>
