--- a/atcat/index.html
+++ b/atcat/index.html
@@ -138,7 +138,7 @@
       </li>
 
       <li>
-	<strong> March 8th, 2022 </strong> <br>
+	<strong> March 8th, 2022 </strong> [<a href="./ATCATstruct-jason-parker-3-8-22.pdf">slides</a>]<br>
 	<a href="https://www.jasonparkermath.com/">
 	  Jason Parker</a>, Brandon University <br><br>
         Title: <em>Enriched structure-semantics adjunctions and monad-theory equivalences for subcategories of arities
